[gd_scene load_steps=8 format=3 uid="uid://dbiug4njj0xm7"]

[ext_resource type="Script" path="res://Scripts/GUI/UIManager.gd" id="1_8vvr1"]
[ext_resource type="PackedScene" uid="uid://xech0a6r2ni6" path="res://GameComponents/GUI/health_container.tscn" id="3_g5a5p"]
[ext_resource type="PackedScene" uid="uid://c0evnav84nr83" path="res://GameComponents/GUI/pause_ui.tscn" id="3_gxgmh"]
[ext_resource type="PackedScene" uid="uid://xxdcxkrjegxv" path="res://GameComponents/GUI/gameover_ui.tscn" id="4_0kkfx"]
[ext_resource type="PackedScene" uid="uid://xfkbxa5pluwk" path="res://GameComponents/GUI/levelcomplete_ui.tscn" id="5_xl6ur"]
[ext_resource type="PackedScene" uid="uid://rsd1vkuyp70p" path="res://GameComponents/GUI/score_ui.tscn" id="6_nsksp"]
[ext_resource type="PackedScene" uid="uid://ck88aacg8oi77" path="res://GameComponents/GUI/endless_gameover_ui.tscn" id="7_3urrg"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1918.0
offset_bottom = 1078.0
script = ExtResource("1_8vvr1")

[node name="HealthContainer" parent="." instance=ExtResource("3_g5a5p")]
layout_mode = 1
offset_top = 14.0
offset_bottom = 89.0

[node name="PauseMenu" parent="." instance=ExtResource("3_gxgmh")]
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="GameoverMenu" parent="." instance=ExtResource("4_0kkfx")]
process_mode = 0
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="LevelCompleteMenu" parent="." instance=ExtResource("5_xl6ur")]
z_index = 100
layout_mode = 1

[node name="Score" parent="." instance=ExtResource("6_nsksp")]
layout_mode = 1
offset_left = 952.0
offset_top = -1.0
offset_right = 956.0
scale = Vector2(1.35, 1.35)

[node name="EndlessGameoverMenu" parent="." instance=ExtResource("7_3urrg")]
layout_mode = 1
offset_left = 660.0
offset_top = -90.0
offset_right = 660.0
offset_bottom = -18.0
